do q9 from chapter 11

--- a/11-hypothesis_tests.ipynb
+++ b/11-hypothesis_tests.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "revolutionary-focus",
+   "execution_count": 1,
+   "id": "impossible-knight",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.stats import chi2_contingency\n",
-    "from scipy.stats import chi2"
+    "from scipy.stats import chi2\n",
+    "from scipy.stats import norm"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "handy-russell",
+   "id": "impaired-bradford",
    "metadata": {},
    "source": [
     "## Question 8\n",
@@ -34,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ongoing-white",
+   "execution_count": 2,
+   "id": "acoustic-professional",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "billion-wages",
+   "id": "regional-pension",
    "metadata": {},
    "source": [
     "### Test independence between race and week of death using chi2"
@@ -57,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "subsequent-diploma",
+   "execution_count": 3,
+   "id": "published-wealth",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +74,7 @@
        "        [ 54.81715006, 155.18284994]]))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "invalid-patch",
+   "id": "elegant-hopkins",
    "metadata": {},
    "source": [
     "p-value of 0.006 shows there is strong evidence that that race and week of death are dependent"
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assisted-blind",
+   "id": "appreciated-sampling",
    "metadata": {},
    "source": [
     "### test that number of deaths for jewish people is independent of week\n",
@@ -102,8 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "thrown-madness",
+   "execution_count": 4,
+   "id": "raised-tribune",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +113,7 @@
        "array([55, 33, 70, 49])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,8 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "subjective-intervention",
+   "execution_count": 5,
+   "id": "russian-factory",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +135,7 @@
        "array([51.75, 51.75, 51.75, 51.75])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,8 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "negative-physics",
+   "execution_count": 6,
+   "id": "regional-software",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
        "13.579710144927537"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,8 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "demographic-estimate",
+   "execution_count": 7,
+   "id": "adjacent-weekly",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +182,7 @@
        "0.0035368204078958243"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "published-configuration",
+   "id": "animated-talent",
    "metadata": {},
    "source": [
     "p-value of 0.003 is strong evidence that probability of death for chinese women depends on week number."
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reserved-registration",
+   "id": "complex-minute",
    "metadata": {},
    "source": [
     "### test that number of deaths for jewish people is independent of week\n",
@@ -211,8 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "dying-paper",
+   "execution_count": 8,
+   "id": "heated-remainder",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +222,7 @@
        "array([141, 145, 139, 161])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,8 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "ignored-disclaimer",
+   "execution_count": 9,
+   "id": "italian-taylor",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +244,7 @@
        "array([146.5, 146.5, 146.5, 146.5])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "growing-windows",
+   "execution_count": 10,
+   "id": "comparative-desert",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +266,7 @@
        "2.040955631399317"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,8 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "cardiac-sierra",
+   "execution_count": 11,
+   "id": "alike-flight",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +291,7 @@
        "0.5639498711784423"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,16 +303,173 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assisted-drilling",
+   "id": "primary-pulse",
    "metadata": {},
    "source": [
     "p-value of 0.56 is evidence that number of deaths for jewish women is independent of week number"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "handled-warner",
+   "metadata": {},
+   "source": [
+    "## Question 9\n",
+    "Conducting hypothesis tests that a new drugs are better than placebo at reducing nausea\n",
+    "\n",
+    "|                        | Number of Patients | Incidence of Nausea |\n",
+    "|------------------------|--------------------|---------------------|\n",
+    "| Placebo                | 80                 | 45                  |\n",
+    "| Chlorpromazine         | 75                 | 26                  |\n",
+    "| Dimenhydrinate         | 85                 | 52                  |\n",
+    "| Pentobarbital (100 mg) | 67                 | 35                  |\n",
+    "| Pentobarbital (150 mg) | 85                 | 37                  |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "final-words",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[80 35]\n",
+      " [75 49]\n",
+      " [85 33]\n",
+      " [67 32]\n",
+      " [85 48]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.array([\n",
+    "    [80, 45],\n",
+    "    [75, 26],\n",
+    "    [85, 52],\n",
+    "    [67, 35],\n",
+    "    [85, 37],\n",
+    "])\n",
+    "\n",
+    "# recalculate second column to correspond to successes, rather than failures\n",
+    "data[:,1] = data[:,0] - data[:,1]\n",
+    "\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "loving-warning",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_p2_gr_p1(n1, x1, n2, x2):\n",
+    "    \"\"\"\n",
+    "    behaviour:\n",
+    "        conduct one-sided wald test\n",
+    "        assume X1 ~ Bin(n1, p1), X2 ~ Bin(n2, p2) and X1 and X2 are independent\n",
+    "        H0: p1=p2, H1: p2>p1\n",
+    "        test statistic is t = p2_hat - p1_hat\n",
+    "        under h0, t  approximately follows N(0, var(p1_hat)+var(p2_hat))\n",
+    "    \n",
+    "    inputs:\n",
+    "        n1 and n2: parameters of distributions X1 and X2\n",
+    "        x1, x2: observed instances of X1 and X2\n",
+    "    \n",
+    "    output:\n",
+    "        results dictionary containing\n",
+    "            p1_hat\n",
+    "            p2_hat\n",
+    "            t\n",
+    "            se\n",
+    "            p-value\n",
+    "    \n",
+    "   \n",
+    "    \"\"\"\n",
+    "    p1_hat = x1/n1\n",
+    "    p2_hat = x2/n2\n",
+    "    \n",
+    "    t = p2_hat - p1_hat\n",
+    "    \n",
+    "    se = (p1_hat*(1-p1_hat)/n1 + p2_hat*(1-p2_hat)/n2)**0.5\n",
+    "    \n",
+    "    Z = t/se\n",
+    "    \n",
+    "    p_value = 1 - norm.cdf(Z)\n",
+    "    \n",
+    "    results = dict(\n",
+    "        p1_hat = p1_hat,\n",
+    "        p2_hat = p2_hat,\n",
+    "        t = t,\n",
+    "        se = se,\n",
+    "        p_value = p_value\n",
+    "    )\n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "preliminary-china",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treatment 1\n",
+      "{'p1_hat': 0.4375, 'p2_hat': 0.6533333333333333, 't': 0.21583333333333332, 'se': 0.07807703712905512, 'p_value': 0.002851695777628893}\n",
+      "\n",
+      "Treatment 2\n",
+      "{'p1_hat': 0.4375, 'p2_hat': 0.38823529411764707, 't': -0.04926470588235293, 'se': 0.07661847879507237, 'p_value': 0.7398838172885266}\n",
+      "\n",
+      "Treatment 3\n",
+      "{'p1_hat': 0.4375, 'p2_hat': 0.47761194029850745, 't': 0.040111940298507454, 'se': 0.08246231979025985, 'p_value': 0.31333204736569453}\n",
+      "\n",
+      "Treatment 4\n",
+      "{'p1_hat': 0.4375, 'p2_hat': 0.5647058823529412, 't': 0.12720588235294117, 'se': 0.0772534224000257, 'p_value': 0.04981961670910118}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,5):\n",
+    "    print(f'Treatment {i}')\n",
+    "    print(test_p2_gr_p1(data[0,0], data[0,1], data[i,0], data[i,1]))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "legal-basic",
+   "metadata": {},
+   "source": [
+    "p-values are 0.0028, 0.739, 0.313, 0.049\n",
+    "\n",
+    "#### No corrections for multiple tests\n",
+    "at 5% signifiance level, we would conclude that treatment 1 and treatment 4 have significant results.\n",
+    "\n",
+    "#### Bonferonni corrections\n",
+    "cutoff becomes 0.0125 rather than 0.05, so only treatment 1 would be considered significant\n",
+    "\n",
+    "#### Benjamni-Hochberg:\n",
+    "ordered p-values: 0.0028, 0.049, 0.313, 0.739\n",
+    "compared to: 0.0125, 0.025, 0.0375, 0.05\n",
+    "\n",
+    "same conclusion as bonferonni: only consider treatment 1 significant.\n",
+    "\n",
+    "#### Final conclusions\n",
+    "strong evidence that treatment 1 is significant, some evidence that treatment 4 is significant"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "governmental-postage",
+   "id": "authorized-peoples",
    "metadata": {},
    "outputs": [],
    "source": []
