change filename, tweak some markdown comments

--- a/11-hypothesis_tests.ipynb
+++ b/11-hypothesis_tests.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "impossible-knight",
+   "id": "hindu-binding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impaired-bradford",
+   "id": "religious-muslim",
    "metadata": {},
    "source": [
     "## Question 8\n",
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "acoustic-professional",
+   "id": "uniform-operation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regional-pension",
+   "id": "pharmaceutical-jimmy",
    "metadata": {},
    "source": [
     "### Test independence between race and week of death using chi2"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "published-wealth",
+   "id": "continuous-calculation",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elegant-hopkins",
+   "id": "registered-twins",
    "metadata": {},
    "source": [
     "p-value of 0.006 shows there is strong evidence that that race and week of death are dependent"
@@ -93,10 +93,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appreciated-sampling",
+   "id": "normal-listening",
    "metadata": {},
    "source": [
-    "### test that number of deaths for jewish people is independent of week\n",
+    "### test that number of deaths for chinese people is independent of week\n",
     "\n",
     "Let pi = probability of death in each week. H0: pi = 0.25 for all i"
    ]
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "raised-tribune",
+   "id": "premium-virgin",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "russian-factory",
+   "id": "nuclear-university",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "regional-software",
+   "id": "confidential-demand",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "adjacent-weekly",
+   "id": "severe-effort",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animated-talent",
+   "id": "czech-oracle",
    "metadata": {},
    "source": [
     "p-value of 0.003 is strong evidence that probability of death for chinese women depends on week number."
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-minute",
+   "id": "maritime-outdoors",
    "metadata": {},
    "source": [
     "### test that number of deaths for jewish people is independent of week\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "heated-remainder",
+   "id": "reserved-history",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "italian-taylor",
+   "id": "peripheral-captain",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "comparative-desert",
+   "id": "direct-mandate",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "alike-flight",
+   "id": "danish-tunnel",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "primary-pulse",
+   "id": "heavy-reaction",
    "metadata": {},
    "source": [
     "p-value of 0.56 is evidence that number of deaths for jewish women is independent of week number"
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handled-warner",
+   "id": "cross-divorce",
    "metadata": {},
    "source": [
     "## Question 9\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "final-words",
+   "id": "theoretical-coast",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "loving-warning",
+   "id": "matched-bernard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "preliminary-china",
+   "id": "informal-insulin",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legal-basic",
+   "id": "protected-width",
    "metadata": {},
    "source": [
     "p-values are 0.0028, 0.739, 0.313, 0.049\n",
@@ -458,9 +458,10 @@
     "\n",
     "#### Benjamni-Hochberg:\n",
     "ordered p-values: 0.0028, 0.049, 0.313, 0.739\n",
-    "compared to: 0.0125, 0.025, 0.0375, 0.05\n",
     "\n",
-    "same conclusion as bonferonni: only consider treatment 1 significant.\n",
+    "compare p-values to: 0.0125, 0.025, 0.0375, 0.05\n",
+    "\n",
+    "get same conclusion as bonferonni: only consider treatment 1 significant.\n",
     "\n",
     "#### Final conclusions\n",
     "strong evidence that treatment 1 is significant, some evidence that treatment 4 is significant"
@@ -469,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "authorized-peoples",
+   "id": "essential-division",
    "metadata": {},
    "outputs": [],
    "source": []
